# homework_m07

./: my_select.py  pyproject.toml  seeds.py
database/: models.py
migrations/: env.py
migrations/versions/: e05f7b36d0c6_init.py
